--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         container: '#video', //容器的ID或className
         variable: 'player',//播放函数名称
         poster: './img/poster.jpg',//封面图片
-        video: "http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4",
+        video: "https://raw.githubusercontent.com/zachpay/zachPay.github.io/master/mp4/youtube/1.mp4",
     };
     var player = new ckplayer(videoObject);
 
