--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name=”applicable-device” content=”pc,mobile”>
-  <title>直播视频在线播放</title>
+  <title>视频在线播放</title>
   <meta name="keywords" content="mp4,在线">
   <meta name="description" content="在线播放">
+  <link rel="icon" href="https://avatars2.githubusercontent.com/u/64484979?s=60&amp;v=4.png">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <script src="./js/ckplayer/ckplayer.js"></script>
   
@@ -17,7 +18,7 @@
   <div class="navbar navbar-dark bg-dark shadow-lg">
     <div class="container d-flex justify-content-between">
       <a href="/" class="navbar-brand d-flex align-items-center">
-        直播视频在线播放
+        视频在线播放
       </a>
     </div>
   </div>
