--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <span class="input-group-text">MP4</span>
         </div>
         <input id="video_url_mp4" type="text" class="form-control" placeholder="video url" aria-label="video url"
-               aria-describedby="playVideo" value="http://img.ksbbs.com/asset/Mon_1703/05cacb4e02f9d9e.mp4">
+               aria-describedby="playVideo" value="https://raw.githubusercontent.com/zachpay/zachPay.github.io/master/mp4/youtube/1.mp4">
         <div class="input-group-append">
           <button class="btn btn-primary" onclick="playVideoMp4()">播放</button>
         </div>
