--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/64484979?s=60&amp;v=4.png">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <script src="./js/ckplayer/ckplayer.js"></script>
-  
+  <script src="./js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="bg-light">
 <!--头部-->
