--- a/index.html
+++ b/index.html
@@ -144,6 +144,6 @@
         changeVideo(videoUrl);
     }
 </script>
-
+<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279281598'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1279281598%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
