--- a/index.html
+++ b/index.html
@@ -11,8 +11,30 @@
   <link rel="stylesheet" href="./css/bootstrap.css">
   <script src="./js/ckplayer/ckplayer.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.4.0/weui.min.css">
+  
+<style type="text/css">
+   
+  body{
+background-color: var(--weui-BG-0);
+}
+
+body:before {
+  width: 100%;
+  height: 100%;
+  content: ' ';
+  position: fixed;
+  z-index: -1;
+  top: 0;
+  left: 0;
+background-color: var(--weui-BG-0);
+}
+  </style>
+
+
+
 </head>
-<body class="bg-light">
+<body class="bg-light" ontouchstart>
 <!--头部-->
 <header>
   <div class="navbar navbar-dark bg-dark shadow-lg">
@@ -139,6 +161,6 @@
         changeVideo(videoUrl);
     }
 </script>
-<script type="text/javascript">document.write(unescape("%3Cfooter class='pt-3 pb-3 mt-5 bg-white'%3E%3Cdiv style='color: orange;' class='container text-center'%3E视频在线播放@2020%3Cbr/%3E%3Cbr/%3E%3Cbr/%3E%3Cbr/%3E%3Cspan style='font-size: 8px;padding-bottom: 30px;' id='cnzz_stat_icon_1279281598'%3E%3C/span%3E%3C/div%3E%3C/footer%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1279281598%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+<script type="text/javascript">document.write(unescape("%3Cfooter class='pt-3 pb-3 mt-5 bg-white'%3E%3Cdiv style='color: orange;' class='container text-center'%3E视频在线播放@2020%3Cbr/%3E%3Cspan style='font-size: 8px;padding-bottom: 30px;' id='cnzz_stat_icon_1279281598'%3E%3C/span%3E%3C/div%3E%3C/footer%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1279281598%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
