--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="keywords" content="mp4,在线">
   <meta name="description" content="在线播放">
   <link rel="icon" href="https://avatars2.githubusercontent.com/u/64484979?s=60&amp;v=4.png">
-  <link rel="stylesheet" href="./css/bootstrap.css">
-  <script src="./js/ckplayer/ckplayer.js"></script>
-  <script src="./js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://zachpay.github.io/mp4/css/bootstrap.css">
+  <script src="https://zachpay.github.io/mp4/js/ckplayer/ckplayer.js"></script>
+  <script src="https://zachpay.github.io/mp4/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.4.0/weui.min.css">
   
 <style type="text/css">
@@ -102,7 +102,7 @@ background-color: var(--weui-BG-0);
     var videoObject = {
         container: '#video', //容器的ID或className
         variable: 'player',//播放函数名称
-        poster: './img/poster.jpg',//封面图片
+        poster: 'https://zachpay.github.io/mp4/img/poster.jpg',//封面图片
         video: "https://raw.githubusercontent.com/zachpay/zachPay.github.io/master/mp4/youtube/1.mp4",
     };
     var player = new ckplayer(videoObject);
