--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ background-color: var(--weui-BG-0);
           <span class="input-group-text">MP4</span>
         </div>
         <input id="video_url_mp4" type="text" class="form-control" placeholder="video url" aria-label="video url"
-               aria-describedby="playVideo" value="./mp4/youtube/1.mp4">
+               aria-describedby="playVideo" value="http://mp4.v-8.win/mp4/youtube/1.mp4">
         <div class="input-group-append">
           <button class="btn btn-primary" onclick="playVideoMp4()">播放</button>
         </div>
